More UI changes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -107,11 +107,10 @@ body {
   width: 960px;
 }
 header {
-  font-family: 'Georgia';
+  font-family: 'Palatino';
   margin-top: 20px;
   margin-bottom: 60px;
   color: #000;
-  font-size: 25px;
   text-align: center;
 /*
    * Note the use of the `main-color`
@@ -122,14 +121,24 @@ header {
 }
 header h1 {
   float: left;
+  font-size: 40px;
+  font-style: italic;
 }
 .left-content {
   float: left;
-  width: 60%;
+  width: 70%;
+  font-size: 20px;
+}
+.left-content a {
+  background-color: #000;
+  color: #fff;
+  padding: 3px;
+  width: auto;
 }
 .right-content {
   float: right;
   width: 20%;
+  font-size: 20px;
 }
 .right-content p {
   margin-bottom: 20px;
@@ -156,7 +165,7 @@ header h1 {
   margin-bottom: 10px;
 }
 .right-content p p {
-  font-size: 13px;
+  font-size: 40px;
   padding: 0px 10px;
   margin-bottom: 10px;
 }
@@ -166,11 +175,46 @@ p {
 .links {
   list-style: none;
 }
+.links a {
+  background-color: #000;
+  color: #fff;
+  padding: 3px;
+  width: auto;
+  text-decoration: none;
+}
+.links li {
+  margin-bottom: 15px;
+  cursor: hand;
+  cursor: pointer;
+}
 footer {
-  width: 500px;
-  margin: 50px auto;
+  width: 70%;
   border-top: 1px dotted #ccc;
   padding-top: 5px;
-  font-size: 13px;
+  font-size: 20px;
   clear: both;
+}
+.sidebar {
+  position: fixed;
+  top: 100px;
+  background-color: #fff;
+  padding: 20px;
+}
+a.active {
+  color: #ff0;
+}
+.left-content div {
+  margin-bottom: 20px;
+}
+div.home img {
+  float: left;
+  padding: 20px;
+}
+p {
+  margin-top: 10px;
+}
+header span {
+  background-color: #000;
+  color: #fff;
+  padding: 5px;
 }
