--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,47 @@
 extend layout
 block home
+  img(src="/images/thandazile_circle_bw.png")
+  a.section_link(name="home")
+    | Hello There !
   p
-    | Vivamus hendrerit arcu sed erat molestie
-    | vehicula. Sed auctor neque eu tellus
-    | rhoncus ut eleifend nibh porttitor. Ut in.
+    | Welcome to my little space on the interwebs.
+    | In case you haven't already figured it out, my name is Thandazile Moyo.
+    | I don't usually have much to say so I asked my husband to do that for me instead!
+  p
+    | To find out more about me please click through to my about section.
+    | I'm interested in chemicals and such, so if you are here to find out more about that then you are certainly in the right place.
+    | I am available for work opportunities so please do not hesitate to contact me.
+  p
+    | If you are tech minded it will please you to know that this site is built using the finest in web standards.
+    | HTML5, JavaScript, NodeJS anyone?
+  p
+    | Donec congue lacinia dui, a porttitor
+    | lectus condimentum laoreet. Nunc eu
+    | ullamcorper orci. Quisque eget odio ac
+    | lectus vestibulum faucibus eget in metus.
+    | In pellentesque faucibus vestibulum. Nulla
+    | at nulla justo, eget luctus tortor.
+  p
+    | Donec congue lacinia dui, a porttitor
+    | lectus condimentum laoreet. Nunc eu
+    | ullamcorper orci. Quisque eget odio ac
+    | lectus vestibulum faucibus eget in metus.
+    | In pellentesque faucibus vestibulum. Nulla
+    | at nulla justo, eget luctus tortor.
+  p
+    | Donec congue lacinia dui, a porttitor
+    | lectus condimentum laoreet. Nunc eu
+    | ullamcorper orci. Quisque eget odio ac
+    | lectus vestibulum faucibus eget in metus.
+    | In pellentesque faucibus vestibulum. Nulla
+    | at nulla justo, eget luctus tortor.
+  p
+    | Donec congue lacinia dui, a porttitor
+    | lectus condimentum laoreet. Nunc eu
+    | ullamcorper orci. Quisque eget odio ac
+    | lectus vestibulum faucibus eget in metus.
+    | In pellentesque faucibus vestibulum. Nulla
+    | at nulla justo, eget luctus tortor.
   p
     | Donec congue lacinia dui, a porttitor
     | lectus condimentum laoreet. Nunc eu
@@ -12,10 +50,47 @@ block home
     | In pellentesque faucibus vestibulum. Nulla
     | at nulla justo, eget luctus tortor.
 block about
+  a.section_link(name="about")
+    | About
+  p
+    | Donec congue lacinia dui, a porttitor
+    | lectus condimentum laoreet. Nunc eu
+    | ullamcorper orci. Quisque eget odio ac
+    | lectus vestibulum faucibus eget in metus.
+    | In pellentesque faucibus vestibulum. Nulla
+    | at nulla justo, eget luctus tortor.
+  p
+    | Donec congue lacinia dui, a porttitor
+    | lectus condimentum laoreet. Nunc eu
+    | ullamcorper orci. Quisque eget odio ac
+    | lectus vestibulum faucibus eget in metus.
+    | In pellentesque faucibus vestibulum. Nulla
+    | at nulla justo, eget luctus tortor.
+  p
+    | Donec congue lacinia dui, a porttitor
+    | lectus condimentum laoreet. Nunc eu
+    | ullamcorper orci. Quisque eget odio ac
+    | lectus vestibulum faucibus eget in metus.
+    | In pellentesque faucibus vestibulum. Nulla
+    | at nulla justo, eget luctus tortor.
+  p
+    | Donec congue lacinia dui, a porttitor
+    | lectus condimentum laoreet. Nunc eu
+    | ullamcorper orci. Quisque eget odio ac
+    | lectus vestibulum faucibus eget in metus.
+    | In pellentesque faucibus vestibulum. Nulla
+    | at nulla justo, eget luctus tortor.
   p
     | Vivamus hendrerit arcu sed erat molestie
     | vehicula. Sed auctor neque eu tellus
     | rhoncus ut eleifend nibh porttitor. Ut in.
+  p
+    | Donec congue lacinia dui, a porttitor
+    | lectus condimentum laoreet. Nunc eu
+    | ullamcorper orci. Quisque eget odio ac
+    | lectus vestibulum faucibus eget in metus.
+    | In pellentesque faucibus vestibulum. Nulla
+    | at nulla justo, eget luctus tortor.
   p
     | Donec congue lacinia dui, a porttitor
     | lectus condimentum laoreet. Nunc eu
@@ -24,6 +99,8 @@ block about
     | In pellentesque faucibus vestibulum. Nulla
     | at nulla justo, eget luctus tortor.
 block work
+  a.section_link(name="work")
+    | Work
   p
     | Vivamus hendrerit arcu sed erat molestie
     | vehicula. Sed auctor neque eu tellus
@@ -35,11 +112,41 @@ block work
     | lectus vestibulum faucibus eget in metus.
     | In pellentesque faucibus vestibulum. Nulla
     | at nulla justo, eget luctus tortor.
+  p
+    | Donec congue lacinia dui, a porttitor
+    | lectus condimentum laoreet. Nunc eu
+    | ullamcorper orci. Quisque eget odio ac
+    | lectus vestibulum faucibus eget in metus.
+    | In pellentesque faucibus vestibulum. Nulla
+    | at nulla justo, eget luctus tortor.
+  p
+    | Donec congue lacinia dui, a porttitor
+    | lectus condimentum laoreet. Nunc eu
+    | ullamcorper orci. Quisque eget odio ac
+    | lectus vestibulum faucibus eget in metus.
+    | In pellentesque faucibus vestibulum. Nulla
+    | at nulla justo, eget luctus tortor.
 block contact
+  a.section_link(name="contact")
+    | Contact
   p
     | Vivamus hendrerit arcu sed erat molestie
     | vehicula. Sed auctor neque eu tellus
     | rhoncus ut eleifend nibh porttitor. Ut in.
+  p
+    | Donec congue lacinia dui, a porttitor
+    | lectus condimentum laoreet. Nunc eu
+    | ullamcorper orci. Quisque eget odio ac
+    | lectus vestibulum faucibus eget in metus.
+    | In pellentesque faucibus vestibulum. Nulla
+    | at nulla justo, eget luctus tortor.
+  p
+    | Donec congue lacinia dui, a porttitor
+    | lectus condimentum laoreet. Nunc eu
+    | ullamcorper orci. Quisque eget odio ac
+    | lectus vestibulum faucibus eget in metus.
+    | In pellentesque faucibus vestibulum. Nulla
+    | at nulla justo, eget luctus tortor.
   p
     | Donec congue lacinia dui, a porttitor
     | lectus condimentum laoreet. Nunc eu
@@ -50,10 +157,14 @@ block contact
 block sidebar
   ul.links
     li
-      | Home
+      a#home.active
+        | Home
     li
-      | About
+      a#about
+        | About
     li
-      | Work
+      a#work
+        | Work
     li
-      | Contact
+      a#contact
+        | Contact
