--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,12 +1,15 @@
 !!!5
 html
   head
-    title #{title} - Thandazile Moyo
+    title Thandazile Moyo
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/javascripts/jquery-1.7.min.js')
+    script(src='/javascripts/highlight.js')
+    script(src='/javascripts/jquery.scrollto.min.js')
   body
     header
-      h1 THANDAZILE MOYO
-      img
+      h1 Thandazile Moyo
+      span Favoured
     section.left-content
       .home
         block home
@@ -20,4 +23,4 @@ html
       .sidebar
         block sidebar
     footer
-      p Copyright &copy; Thandazile Moyo
+      p Copyright &copy; Thandazile Moyo 2012
