--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -23,11 +23,10 @@ body
   width: 960px;
 
 header
-  font-family 'Georgia'
+  font-family 'Palatino'
   margin-top 20px
   margin-bottom 60px
   color #000
-  font-size 25px
   text-align center
 
   /*
@@ -39,14 +38,24 @@ header
 
   h1
     float left
+    font-size 40px
+    font-style italic
 
 .left-content
   float left;
-  width 60%;
+  width 70%;
+  font-size 20px;
+
+  a
+    background-color: black;
+    color: white;
+    padding: 3px;
+    width: auto;
 
 .right-content
   float right
   width 20%
+  font-size 20px
 
   p
     margin-bottom 20px
@@ -71,7 +80,7 @@ header
       margin-bottom 10px
 
     p
-      font-size 13px
+      font-size 40px
       padding 0px 10px
       margin-bottom 10px
 
@@ -80,11 +89,56 @@ p
 
 .links
   list-style none
-   
+
+  a
+    background-color: black;
+    color: white;
+    padding: 3px;
+    width: auto;
+    text-decoration: none;
+
+  li
+    margin-bottom 15px
+    cursor: hand
+    cursor: pointer
+
+
 footer
-  width 500px
-  margin 50px auto
+  width 70%
   border-top 1px dotted #ccc
   padding-top 5px
-  font-size 13px
+  font-size 20px
   clear both
+
+.sidebar {
+    position:fixed;
+    top:100px;
+    background-color:#FFF;
+    padding:20px;
+}
+
+a.active
+  color yellow
+
+.left-content
+   div
+     margin-bottom 20px
+
+div.home
+  img
+    float left
+    padding 20px
+
+p
+  margin-top 10px;
+
+header
+  span
+    background-color black
+    color white
+    padding 5px
+
+
+
+
+
