--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ html
   body
     header
       h1 Thandazile Moyo
-      span Favoured
+      span Wife \ Mother \ Engineer
     section.left-content
       .home
         block home
