--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -25,7 +25,7 @@ body
 header
   font-family 'Palatino'
   margin-top 20px
-  margin-bottom 60px
+  margin-bottom 100px
   color #000
   text-align center
 
@@ -129,15 +129,28 @@ div.home
     float left
     padding 20px
 
+  a
+    font-size 25px
+
 p
-  margin-top 10px;
+  margin-top 20px;
 
 header
   span
     background-color black
-    color white
+    color yellow
     padding 5px
+    font-size 20px
 
+div.contact
+  span
+    a
+      background-color black
+      color yellow
+      font-size 15px
+      text-decoration none
+      cursor pointer
+      cursor hand
 
 
 
