Changes to content

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,15 +19,15 @@ block about
     | About
   p
     | I am a wife, mother and Chemical Engineer. 
-    | I hold a BEng. in Chemical Engineering from the National University of Science and Technology(NUST) and I am currently working towards my PhD at the University of Cape Town(UCT).
+    | I hold a BEng. in Chemical Engineering from the National University of Science and Technology(NUST) and I am currently working towards my MSc at the University of Cape Town(UCT).
   p
     | I live in Cape Town with my husband and we have a beautiful, insanely talkative daughter.
 block work
   a.section_link(name="work")
     | Work
   p
-    | My PhD project involves the Application of Analytical Techiques to study the surface Chemistry of minerals.
-    | I should complete my PhD by the end of 2015.
+    | My MSc project involves the Application of Analytical Techiques to study the surface Chemistry of minerals.
+    | I should complete my MSc by the end of 2015.
 block contact
   a.section_link(name="contact")
     | Contact
