--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ block home
   p
     | To find out more about me please click through to my about section.
     | I'm interested in chemicals and engineering, so if you are here to find out more about that then you are certainly in the right place.
-    | I am currently studying but I am available to listen if you have any interesting projects and future employment opportunities, so please do not hesitate to contact me.
+    | I am currently studying but I am available to listen if you have any interesting projects or future employment opportunities, so please do not hesitate to contact me.
   p
     | If you are technically inclined it will please you to know that this site is built using the finest in web standards.
     | HTML5, JavaScript, NodeJS anyone?
