--- a/views/index.jade
+++ b/views/index.jade
@@ -11,9 +11,6 @@ block home
     | To find out more about me please click through to my about section.
     | I'm interested in chemicals and engineering, so if you are here to find out more about that then you are certainly in the right place.
     | I am currently studying but I am available to listen if you have any interesting projects or future employment opportunities, so please do not hesitate to contact me.
-  p
-    | If you are technically inclined it will please you to know that this site is built using the finest in web standards.
-    | HTML5, JavaScript, NodeJS anyone?
 block about
   a.section_link(name="about")
     | About
@@ -26,8 +23,8 @@ block work
   a.section_link(name="work")
     | Work
   p
-    | My MSc project involves the Application of Analytical Techiques to study the surface Chemistry of minerals.
-    | I should complete my MSc by the end of 2015.
+    | My MSc project involves the Application of Electro-analytical Techiques to study the surface Chemistry of minerals.
+    | I should complete my MSc by the end of 2012.
 block contact
   a.section_link(name="contact")
     | Contact
