--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,8 @@
 !!!5
 html
   head
+    //if lt IE 9
+        script(src='/javascripts/ie_sucks.js')
     title Thandazile Moyo
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/javascripts/jquery-1.7.min.js')
