--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -24,11 +24,11 @@ body
 
 header
   font-family 'Palatino'
-  margin-top 20px
   margin-bottom 100px
   color #000
-  text-align center
   width 100%
+  overflow hidden
+  padding-bottom 10px
 
   /*
    * Note the use of the `main-color`
@@ -142,6 +142,7 @@ header
     color yellow
     padding 5px
     font-size 20px
+    float right
 
 div.contact
   span
