--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,10 +108,11 @@ body {
 }
 header {
   font-family: 'Palatino';
-  margin-top: 20px;
   margin-bottom: 100px;
   color: #000;
-  text-align: center;
+  width: 100%;
+  overflow: hidden;
+  padding-bottom: 10px;
 /*
    * Note the use of the `main-color`
    * variable and the `darken` function
@@ -221,6 +222,7 @@ header span {
   color: #ff0;
   padding: 5px;
   font-size: 20px;
+  float: right;
 }
 div.contact span a {
   background-color: #000;
