--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -43,15 +43,16 @@ header
     font-style italic
 
 .left-content
-  float left;
-  width 70%;
-  font-size 20px;
+  float left
+  width 70%
+  font-size 20px
+  margin-left 0px
 
   a
-    background-color: black;
-    color: white;
-    padding: 3px;
-    width: auto;
+    background-color black
+    color white
+    padding 3px
+    width auto
 
 .right-content
   float right
