More styling changes

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -93,11 +93,11 @@ p
   list-style none
 
   a
-    background-color: black;
-    color: white;
-    padding: 3px;
-    width: auto;
-    text-decoration: none;
+    background-color black
+    color white
+    padding 3px
+    width auto
+    text-decoration: none
 
   li
     margin-bottom 15px
