--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,10 +108,9 @@ body {
 }
 header {
   font-family: 'Palatino';
-  margin-bottom: 100px;
+  margin-bottom: 20px;
   color: #000;
   width: 100%;
-  overflow: hidden;
   padding-bottom: 10px;
 /*
    * Note the use of the `main-color`
@@ -121,14 +120,20 @@ header {
   text-shadow: 0px -1px 0px #b3b3b3;
 }
 header h1 {
-  float: left;
   font-size: 40px;
   font-style: italic;
+}
+header span {
+  background-color: #000;
+  color: #ff0;
+  padding: 5px;
+  font-size: 20px;
 }
 .left-content {
   float: left;
   width: 70%;
   font-size: 20px;
+  margin-left: 0px;
 }
 .left-content a {
   background-color: #000;
@@ -216,13 +221,6 @@ div.home a {
 }
 p {
   margin-top: 20px;
-}
-header span {
-  background-color: #000;
-  color: #ff0;
-  padding: 5px;
-  font-size: 20px;
-  float: right;
 }
 div.contact span a {
   background-color: #000;
