--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -114,7 +114,7 @@ footer
   border-top 1px dotted #ccc
   padding-top 5px
   font-size 20px
-  clear both
+  float left
 
 .sidebar {
     position:fixed;
