--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -28,6 +28,7 @@ header
   color #000
   width 100%
   padding-bottom 10px
+  position relative
 
   /*
    * Note the use of the `main-color`
@@ -39,18 +40,24 @@ header
   h1
     font-size 40px
     font-style italic
+    position absolute
+    top 0px
 
   span
     background-color black
     color yellow
     padding 5px
     font-size 20px
+    positon absolute
+    top 0px
+    right 0px
 
 .left-content
   float left
   width 70%
   font-size 20px
   margin-left 0px
+  margin-top 100px;
 
   a
     background-color black
