--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -48,7 +48,7 @@ header
     color yellow
     padding 5px
     font-size 20px
-    positon absolute
+    position absolute
     top 0px
     right 0px
 
