Adding contact links

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,7 @@ block about
   a.section_link(name="about")
     | About
   p
-    | I am a wife, mother and Chemical Engineer. 
+    | I am a wife, mother and Chemical Engineer.
     | I hold a BEng. in Chemical Engineering from the National University of Science and Technology(NUST) and I am currently working towards my MSc at the University of Cape Town(UCT).
   p
     | I live in Cape Town with my husband and we have a beautiful, insanely talkative daughter.
@@ -32,9 +32,11 @@ block contact
     | Please feel free to get in touch with me if you are involved in any interesting Chemical Engineering projects.
   p
     | Reachable on the interwebs :
-    span 
-      span 
+    span
+      span
         a(href="http://twitter.com/thandazile_m") Twitter
+      span
+        a(href="http://za.linkedin.com/in/thandazilemoyo") LinkedIn
 block sidebar
   ul.links
     li
