--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -112,6 +112,8 @@ header {
   color: #000;
   width: 100%;
   padding-bottom: 10px;
+  position: relative;
+  white-space: nowrap;
 /*
    * Note the use of the `main-color`
    * variable and the `darken` function
@@ -122,18 +124,24 @@ header {
 header h1 {
   font-size: 40px;
   font-style: italic;
+  position: absolute;
+  top: 0px;
 }
 header span {
   background-color: #000;
   color: #ff0;
   padding: 5px;
   font-size: 20px;
+  position: absolute;
+  top: 0px;
+  right: 0px;
 }
 .left-content {
   float: left;
   width: 70%;
   font-size: 20px;
   margin-left: 0px;
+  margin-top: 100px;
 }
 .left-content a {
   background-color: #000;
@@ -198,7 +206,7 @@ footer {
   border-top: 1px dotted #ccc;
   padding-top: 5px;
   font-size: 20px;
-  clear: both;
+  float: left;
 }
 .sidebar {
   position: fixed;
@@ -221,6 +229,9 @@ div.home a {
 }
 p {
   margin-top: 20px;
+}
+div.contact span {
+  padding: 5px;
 }
 div.contact span a {
   background-color: #000;
