Adding google analytics

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
     title Thandazile Moyo
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/javascripts/jquery-1.7.min.js')
+    script(src='/javascripts/ga.js')
     script(src='/javascripts/highlight.js')
     script(src='/javascripts/jquery.scrollto.min.js')
   body
