--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ block home
     | In case you haven't already figured it out, my name is Thandazile Moyo.
     | I don't usually have much to say so this time I asked my husband to turn my thoughts to code and then to text!
   p
-    | To find out more about me please click through to my about section.
+    | To find out more about me please navigate to my about section.
     | I'm interested in chemicals and engineering, so if you are here to find out more about that then you are certainly in the right place.
     | I am currently studying but I am available to listen if you have any interesting projects or future employment opportunities, so please do not hesitate to contact me.
 block about
