--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,7 @@
 !!!5
 html
   head
+  meta(charset="utf-8")
     //if lt IE 9
         script(src='/javascripts/ie_sucks.js')
     title Thandazile Moyo
